--- a/src/UniversalInjectorFramework/UniversalInjectorFramework.vcxproj
+++ b/src/UniversalInjectorFramework/UniversalInjectorFramework.vcxproj
@@ -120,8 +120,8 @@
   </ItemDefinitionGroup>
   <PropertyGroup>
     <TargetName>$(Configuration)</TargetName>
-    <OutDir>$(SolutionDir)Build\$(Platform)\$(Configuration)\</OutDir>
-    <IntDir>Temp\$(Platform)\$(Configuration)\</IntDir>
+    <OutDir>$(SolutionDir)Build\$(ProjectName)\$(Platform)\$(Configuration)\</OutDir>
+    <IntDir>$(SolutionDir)Build\$(ProjectName)\$(Platform)\$(Configuration)\obj\</IntDir>
     <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(SolutionDir)$(ProjectName);</IncludePath>
   </PropertyGroup>
   <!-- configurations -->
