--- a/src/UniversalInjectorFramework/UniversalInjectorFramework.vcxproj
+++ b/src/UniversalInjectorFramework/UniversalInjectorFramework.vcxproj
@@ -246,6 +246,8 @@
     <ClInclude Include="features\text_processor.h" />
     <ClInclude Include="features\tunnel_decoder.h" />
     <ClInclude Include="features\window_manager.h" />
+    <ClInclude Include="features\yuka_engine_fixes.h" />
+
     <ClInclude Include="proxies\d3d11.h" />
     <ClInclude Include="proxies\d3d8.h" />
     <ClInclude Include="proxies\d3d9.h" />
@@ -282,6 +284,8 @@
     <ClCompile Include="features\text_processor.hooks.cpp" />
     <ClCompile Include="features\tunnel_decoder.cpp" />
     <ClCompile Include="features\window_manager.cpp" />
+    <ClCompile Include="features\yuka_engine_fixes.cpp" />
+
     <ClCompile Include="proxies\d3d8.cpp" />
     <ClCompile Include="proxies\d3d9.cpp" />
     <ClCompile Include="proxies\d3d11.cpp" />
