--- a/src/UniversalInjectorFramework/UniversalInjectorFramework.vcxproj.filters
+++ b/src/UniversalInjectorFramework/UniversalInjectorFramework.vcxproj.filters
@@ -80,6 +80,9 @@
     <ClInclude Include="proxies\d3d8.h">
       <Filter>Header Files\proxies</Filter>
     </ClInclude>
+    <ClInclude Include="features\yuka_engine_fixes.h">
+      <Filter>Header Files\features</Filter>
+    </ClInclude>
     <ClInclude Include="features\tunnel_decoder.h">
       <Filter>Header Files\features</Filter>
     </ClInclude>
@@ -183,6 +186,9 @@
     </ClCompile>
     <ClCompile Include="proxies\d3d8.cpp">
       <Filter>Source Files\proxies</Filter>
+    </ClCompile>
+    <ClCompile Include="features\yuka_engine_fixes.cpp">
+      <Filter>Source Files\features</Filter>
     </ClCompile>
     <ClCompile Include="features\tunnel_decoder.cpp">
       <Filter>Source Files\features</Filter>
