implement memory patcher

--- a/src/UniversalInjectorFramework/UniversalInjectorFramework.vcxproj
+++ b/src/UniversalInjectorFramework/UniversalInjectorFramework.vcxproj
@@ -166,6 +166,7 @@
     <ClInclude Include="config.h" />
     <ClInclude Include="features\file_monitor.h" />
     <ClInclude Include="function_traits.h" />
+    <ClInclude Include="features\memory_patcher.h" />
     <ClInclude Include="proxies\d3d11.h" />
     <ClInclude Include="proxies\d3d8.h" />
     <ClInclude Include="proxies\d3d9.h" />
@@ -190,6 +191,7 @@
     <ClCompile Include="features\character_substitution.cpp" />
     <ClCompile Include="config.cpp" />
     <ClCompile Include="features\file_monitor.cpp" />
+    <ClCompile Include="features\memory_patcher.cpp" />
     <ClCompile Include="proxies\d3d11.cpp" />
     <ClCompile Include="proxies\d3d8.cpp" />
     <ClCompile Include="proxies\d3dcompiler_47.cpp" />
