implement engine fixes

--- a/src/UniversalInjectorFramework/UniversalInjectorFramework.vcxproj
+++ b/src/UniversalInjectorFramework/UniversalInjectorFramework.vcxproj
@@ -224,6 +224,7 @@
     <ClInclude Include="features\character_substitution.h" />
     <ClInclude Include="features\custom_feature.h" />
     <ClInclude Include="features\file_monitor.h" />
+    <ClInclude Include="features\flowers_engine_fixes.h" />
     <ClInclude Include="features\font_manager.h" />
     <ClInclude Include="features\memory_patcher.h" />
     <ClInclude Include="features\play_timer.h" />
@@ -259,6 +260,7 @@
     <ClCompile Include="features\character_substitution.cpp" />
     <ClCompile Include="features\custom_feature.cpp" />
     <ClCompile Include="features\file_monitor.cpp" />
+    <ClCompile Include="features\flowers_engine_fixes.cpp" />
     <ClCompile Include="features\font_manager.cpp" />
     <ClCompile Include="features\memory_patcher.cpp" />
     <ClCompile Include="features\play_timer.cpp" />
