add custom feature stub

--- a/src/UniversalInjectorFramework/UniversalInjectorFramework.vcxproj
+++ b/src/UniversalInjectorFramework/UniversalInjectorFramework.vcxproj
@@ -195,6 +195,7 @@
     <ClInclude Include="features\allocate_console.h" />
     <ClInclude Include="features\character_substitution.h" />
     <ClInclude Include="config.h" />
+    <ClInclude Include="features\custom_feature.h" />
     <ClInclude Include="features\file_monitor.h" />
     <ClInclude Include="features\window_manager.h" />
     <ClInclude Include="function_traits.h" />
@@ -224,6 +225,7 @@
     <ClCompile Include="features\allocate_console.cpp" />
     <ClCompile Include="features\character_substitution.cpp" />
     <ClCompile Include="config.cpp" />
+    <ClCompile Include="features\custom_feature.cpp" />
     <ClCompile Include="features\file_monitor.cpp" />
     <ClCompile Include="features\memory_patcher.cpp" />
     <ClCompile Include="features\window_manager.cpp" />
