--- a/src/UniversalInjectorFramework/UniversalInjectorFramework.vcxproj
+++ b/src/UniversalInjectorFramework/UniversalInjectorFramework.vcxproj
@@ -207,7 +207,6 @@
   <!-- source files -->
   <ItemGroup>
     <ClInclude Include="pch.h" />
-
     <ClInclude Include="ansi.h" />
     <ClInclude Include="callconv.h" />
     <ClInclude Include="config.h" />
@@ -218,19 +217,18 @@
     <ClInclude Include="json.hpp" />
     <ClInclude Include="libraries.h" />
     <ClInclude Include="utils.h" />
-
     <ClInclude Include="features\_feature_base.h" />
     <ClInclude Include="features\allocate_console.h" />
     <ClInclude Include="features\character_substitution.h" />
     <ClInclude Include="features\custom_feature.h" />
     <ClInclude Include="features\file_monitor.h" />
     <ClInclude Include="features\font_manager.h" />
+    <ClInclude Include="features\locale_emulator.h" />
     <ClInclude Include="features\memory_patcher.h" />
     <ClInclude Include="features\play_timer.h" />
     <ClInclude Include="features\start_suspended.h" />
     <ClInclude Include="features\tunnel_decoder.h" />
     <ClInclude Include="features\window_manager.h" />
-
     <ClInclude Include="proxies\d3d11.h" />
     <ClInclude Include="proxies\d3d8.h" />
     <ClInclude Include="proxies\d3d9.h" />
@@ -245,7 +243,6 @@
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
-
     <ClCompile Include="config.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="encoding.cpp" />
@@ -253,19 +250,18 @@
     <ClCompile Include="injector.cpp" />
     <ClCompile Include="libraries.cpp" />
     <ClCompile Include="utils.cpp" />
-
     <ClCompile Include="features\_feature_base.cpp" />
     <ClCompile Include="features\allocate_console.cpp" />
     <ClCompile Include="features\character_substitution.cpp" />
     <ClCompile Include="features\custom_feature.cpp" />
     <ClCompile Include="features\file_monitor.cpp" />
     <ClCompile Include="features\font_manager.cpp" />
+    <ClCompile Include="features\locale_emulator.cpp" />
     <ClCompile Include="features\memory_patcher.cpp" />
     <ClCompile Include="features\play_timer.cpp" />
     <ClCompile Include="features\start_suspended.cpp" />
     <ClCompile Include="features\tunnel_decoder.cpp" />
     <ClCompile Include="features\window_manager.cpp" />
-
     <ClCompile Include="proxies\d3d8.cpp" />
     <ClCompile Include="proxies\d3d9.cpp" />
     <ClCompile Include="proxies\d3d11.cpp" />
