--- a/src/UniversalInjectorFramework/UniversalInjectorFramework.vcxproj.filters
+++ b/src/UniversalInjectorFramework/UniversalInjectorFramework.vcxproj.filters
@@ -92,9 +92,6 @@
     <ClInclude Include="features\file_monitor.h">
       <Filter>Header Files\features</Filter>
     </ClInclude>
-    <ClInclude Include="features\flowers_engine_fixes.h">
-      <Filter>Header Files\features</Filter>
-    </ClInclude>
     <ClInclude Include="callconv.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -118,6 +115,9 @@
     </ClInclude>
     <ClInclude Include="proxies\d3dx9_43.h">
       <Filter>Header Files\proxies</Filter>
+    </ClInclude>
+    <ClInclude Include="features\locale_emulator.h">
+      <Filter>Header Files\features</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -187,9 +187,6 @@
     <ClCompile Include="features\file_monitor.cpp">
       <Filter>Source Files\features</Filter>
     </ClCompile>
-    <ClCompile Include="features\flowers_engine_fixes.cpp">
-      <Filter>Source Files\features</Filter>
-    </ClCompile>
     <ClCompile Include="features\memory_patcher.cpp">
       <Filter>Source Files\features</Filter>
     </ClCompile>
@@ -207,6 +204,9 @@
     </ClCompile>
     <ClCompile Include="proxies\d3dx9_43.cpp">
       <Filter>Source Files\proxies</Filter>
+    </ClCompile>
+    <ClCompile Include="features\locale_emulator.cpp">
+      <Filter>Source Files\features</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
